--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Ulster (Northern Ireland and Ireland) -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: The Red Hand of Ulster
 url: http://www.gutenberg.org/ebooks/29533
